src/css/main.css
/*
	Author: Brandon Kolle
	7/29/2018
 */

.calculator
{
	-fx-background-color: #353535;
}

.otherButton
{
	-fx-background-color: #707172;
	-fx-text-fill: white;
	-fx-background-radius: 0; -fx-font-size: 22px;
}

.otherButton:hover
{
	-fx-background-color: #5b5c5e;
}

.otherButton:pressed
{
	-fx-background-color: #404142;
}

.operatorButton
{
	-fx-background-color: #f4ab35;
	-fx-background-radius: 0;
	-fx-font-size: 22px;
}

.operatorButton:hover
{
	-fx-background-color: #ce8c21;
}

.operatorButton:pressed
{
	-fx-background-color: #ab6a02;
}

.topDisplay
{
	-fx-font-size: 14px; 
	-fx-fill: white;
}

.bottomDisplay
{
	-fx-font-size: 40px; 
	-fx-fill: white;
}

